init posts list style

--- a/src/app/modules/home/components/post-list/post-card/post-card.component.html
+++ b/src/app/modules/home/components/post-list/post-card/post-card.component.html
@@ -1,1 +1,27 @@
-<p>post-card works!</p>
+<div class="post-card-wrapper">
+  <div class="user-information-wrapper d-flex align-items-center gap-3">
+    <div class="user-img-wrapper">
+      <img class="img-thumbnail user-img" src="https://source.unsplash.com/random/80×80/?profile" alt="">
+    </div>
+    <p class="user-title">
+      Sincere@april.biz
+    </p>
+  </div>
+  <div class="post-body">
+    <h4 class="post-title">
+      sung aut facer repelled provident occaecati exception option reprehended
+    </h4>
+    <p class="post-description">
+      {{"sung aut facer repelled provident occaecati exception option reprehended sung aut facer repelled provident occaecati exception option reprehended sung aut facer repelled provident occaecati exception option reprehended" |
+      limitCharacters:200}}
+    </p>
+  </div>
+
+  <div class="post-img-wrapper">
+    <img class="img-fluid post-img" src="https://source.unsplash.com/random/300*200" alt="">
+  </div>
+  <button class="btn btn-secondary btn-comment ">
+    <i class="bi bi-eye"></i>
+    View Comments
+  </button>
+</div>
