--- a/src/app/modules/home/components/post-list/post-list.component.html
+++ b/src/app/modules/home/components/post-list/post-list.component.html
@@ -1,1 +1,6 @@
-<app-post-card></app-post-card>>
+<section class="row justify-content-center mt-4 ">
+  <div class=" col-12 col-md-8">
+    <app-post-card></app-post-card>
+  </div>
+</section>
+
