init home page style

--- a/src/app/home/components/users-navbar/users.component.scss
+++ b/src/app/home/components/users-navbar/users.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../assets/style/sass-utils/variables";
+@import "src/assets/style/sass-utils/variables";
 .user-nav-wrapper{
   display: flex;
   gap: 1rem;
