--- a/src/assets/style/sass-utils/_mixins.scss
+++ b/src/assets/style/sass-utils/_mixins.scss
@@ -11,3 +11,13 @@
   text-transform: $text-transform;
   text-decoration: $text-decoration;
 }
+
+@mixin centerElement() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin border($color: $gray-light-color, $size : 1px){
+  border: solid $size  $color;
+}
