init comments UI

--- a/src/app/home/components/post-list/post-card/post-card.component.html
+++ b/src/app/home/components/post-list/post-card/post-card.component.html
@@ -1,7 +1,7 @@
 <div class="post-card-wrapper">
   <div class="user-information-wrapper d-flex align-items-center gap-3">
     <div class="user-img-wrapper">
-      <img class="img-thumbnail user-img" src="https://source.unsplash.com/random/80×80/?profile" alt="">
+      <img class="img-fluid user-img" src="https://source.unsplash.com/random/80×80/?profile" alt="">
     </div>
     <p class="user-title">
       Sincere@april.biz
@@ -20,8 +20,10 @@
   <div class="post-img-wrapper">
     <img class="img-fluid post-img" src="https://source.unsplash.com/random/300*200" alt="">
   </div>
-  <button class="btn btn-secondary btn-comment ">
+  <button class="btn btn-secondary btn-comment " (click)="onViewComments()" >
     <i class="bi bi-eye"></i>
     View Comments
   </button>
+  <app-comments *ngIf="isViewComments"></app-comments>
+
 </div>
