--- a/src/app/home/components/post-list/post-card/post-card.component.scss
+++ b/src/app/home/components/post-list/post-card/post-card.component.scss
@@ -8,26 +8,19 @@
   flex-direction: column;
   gap: .7rem;
   @include border();
-
   .user-img-wrapper {
-    width: 60px;
-    height: 60px;
-    overflow: hidden;
-    @include centerElement();
-
+    @include img-wrapper-base-style(60px,60px);
+    border-radius: 100px;
     .user-img {
-      width: 100%;
-      height: 100%;
+      width: 60px;
+      height: 60px;
       border-radius: 100px;
-      border: $gray-light-color;
+      @include border();
     }
   }
 
   .post-img-wrapper {
-    @include centerElement();
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
+    @include img-wrapper-base-style(100%,400px);
     .post-img {
       width: 100%;
     }
