--- a/src/app/shared/components/comments/comment-item/comment-item.component.html
+++ b/src/app/shared/components/comments/comment-item/comment-item.component.html
@@ -6,11 +6,9 @@
            alt="">
     </div>
     <div>
-      <p class="comment-user-title">userName</p>
+      <p class="comment-user-title">{{comment.name}}</p>
       <p class="comment-description">
-        est natus enim nihil est dolore omnis voluptatem numquam\net omnis
-        occaecati quod ullam at\nvoluptatem error expedita pariatur\nnihil sint
-        nostrum voluptatem reiciendis et
+        {{comment.body}}
       </p>
     </div>
   </div>
