--- a/src/app/home/components/post-list/post-list.component.html
+++ b/src/app/home/components/post-list/post-list.component.html
@@ -1,6 +1,6 @@
 <section class="row justify-content-center mt-4 ">
-  <div class=" col-12 col-md-8">
-    <app-post-card></app-post-card>
+  <div  *ngFor="let post of posts$ | async" class=" col-12 col-md-8">
+    <app-post-card [post]="post"  ></app-post-card>
   </div>
 </section>
 
