--- a/src/app/home/components/users-navbar/users.component.scss
+++ b/src/app/home/components/users-navbar/users.component.scss
@@ -12,7 +12,7 @@
     text-decoration: none ;
     color: $font-gray-color;
     font-size: 1rem;
-    padding: .5rem;
+    padding: .8rem;
     padding-bottom: 1rem;
     flex-shrink: 0;
     cursor: pointer;
@@ -21,7 +21,6 @@
     }
 
   }
-
   .active{
     font-weight: 500;
     color: $font-black-color;
@@ -30,6 +29,12 @@
 
   @media screen and (max-width: 768px) {
     justify-content: start;
+    gap: .5rem;
+    .user-nav-link{
+      font-size: .8rem;
+      padding: 1rem .5rem ;
+      padding-bottom: 1rem;
+    }
   }
 }
 
