--- a/src/app/shared/components/comments/comments.component.html
+++ b/src/app/shared/components/comments/comments.component.html
@@ -1,3 +1,5 @@
 <div>
-  <li *ngFor="let item of [1,2,3,4,5]" ><app-comment-item></app-comment-item></li>
+  <li *ngFor="let comment of comments$ | async " >
+    <app-comment-item [comment]="comment" ></app-comment-item>
+  </li>
 </div>
