--- a/src/app/home/components/users-navbar/users.component.html
+++ b/src/app/home/components/users-navbar/users.component.html
@@ -1,14 +1,16 @@
-<!-- <nav class="nav users-nav-wrapper">
-  <a class="nav-link active" aria-current="page" href="#">Active</a>
-  <a class="nav-link" routerLink="/1">Link</a>
-  <a *ngFor="let item of [1,2,3,4,5,6,7,8,3,3]" class="nav-link " href="#"    > User Name</a>
-</nav> -->
-
-<div class="nav user-nav-wrapper ">
-  <a *ngFor="let user of users$ |async; let i = index"
+<div class="nav user-nav-wrapper" *ngIf="(users$ | async) as users ; else loading ">
+  <a *ngFor="let user of users; let i = index"
      class="user-nav-link"
      routerLink="/"
      routerLinkActive="active"
      [queryParams]="{userId: user.id}"
      [class.active]="false"> {{user.username}} </a>
 </div>
+
+ <ng-template #loading>
+  <app-skelton-loader></app-skelton-loader>
+ </ng-template>
+
+<ng-container *ngIf="(usersError$ | async) as message ">
+  <app-error-alert [message]="message"></app-error-alert>
+</ng-container>
