--- a/src/app/home/components/post-list/post-list.component.html
+++ b/src/app/home/components/post-list/post-list.component.html
@@ -1,6 +1,15 @@
-<section class="row justify-content-center mt-4 ">
-  <div  *ngFor="let post of posts$ | async" class=" col-12 col-md-8">
+<section class="row justify-content-center mt-4" *ngIf="(posts$ | async) as posts; else loadingOrError">
+  <div  *ngFor="let post of posts" class=" col-12 col-md-8">
     <app-post-card [post]="post"  ></app-post-card>
   </div>
 </section>
+
+<ng-template #loadingOrError>
+    <app-error-alert *ngIf="error;"  [message]="error"></app-error-alert>
+    <div  *ngIf="!error;"  class="row justify-content-center mt-4">
+      <div  *ngFor="let post of [1,2,3]" class=" col-12 col-md-8">
+        <app-post-skelton-loader></app-post-skelton-loader>
+      </div>
+    </div>
+</ng-template>
 
