--- a/src/app/shared/components/error-alert/error-alert.component.html
+++ b/src/app/shared/components/error-alert/error-alert.component.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger m-4 alert-dismissible fade show" role="alert">
   <i class="bi bi-exclamation-circle"></i>
-  {{message || 'An error has occurred please try again later !'}}
+  {{'Ops '+message || 'An error has occurred please try again later !'}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 
