--- a/src/app/home/components/post-list/post-card/comments/comments.component.html
+++ b/src/app/home/components/post-list/post-card/comments/comments.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="(comments$ | async) as comments; else loadingOrError">
-  <li *ngFor="let comment of comments  trackBy:identify  " >
-    <app-comment-item [comment]="comment" ></app-comment-item>
+  <li *ngFor="let comment of comments  trackBy:identify  " [@commentAnimation] >
+    <app-comment-item [comment]="comment"   ></app-comment-item>
   </li>
 </div>
 
@@ -8,7 +8,7 @@
 <ng-template #loadingOrError>
     <app-error-alert *ngIf="error;" [message]="error"></app-error-alert>
     <ng-container *ngIf="!error;" >
-        <app-comment-skelton-loader *ngFor="let comment of [1,2,3,4,5]  " ></app-comment-skelton-loader>
+        <app-comment-skelton-loader *ngFor="let comment of [1,2,3,4,5] "  [@commentAnimation] ></app-comment-skelton-loader>
     </ng-container>
 </ng-template>
 
