--- a/src/app/home/components/post-list/post-card/post-card.component.scss
+++ b/src/app/home/components/post-list/post-card/post-card.component.scss
@@ -30,7 +30,7 @@
   .btn-comment {
     margin-top: 1rem;
     padding: 0.4rem 1rem;
-    width: fit-content;
+    width: 200px;
     border-radius: 100px;
     border-color: $gray-light-color;
     color: $font-black-color;
