--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-users></app-users>
   <ng-container *ngIf="(queryParam$ | async) as queryParam">
-    <app-post-list *ngIf="queryParam.userId" ></app-post-list>
+    <app-post-list *ngIf="queryParam.userId !== undefined" ></app-post-list>
   </ng-container>
 </div>
