--- a/src/app/home/components/users-navbar/users.component.scss
+++ b/src/app/home/components/users-navbar/users.component.scss
@@ -1,4 +1,5 @@
 @import "src/assets/style/sass-utils/variables";
+@import "src/assets/style/sass-utils/_mixins";
 .user-nav-wrapper{
   display: flex;
   gap: 1rem;
@@ -36,6 +37,10 @@
       padding-bottom: 1rem;
     }
   }
+
+  @include hideScrollBar();
+
+
 }
 
 
