--- a/src/assets/style/sass-utils/_mixins.scss
+++ b/src/assets/style/sass-utils/_mixins.scss
@@ -1,17 +1,3 @@
-@mixin paragraph($color) {
-  text-align: left;
-  letter-spacing: 0px;
-  color: $color;
-}
-
-@mixin text-style( $fontSize:20px, $color, $text-transform: capitalize, $text-decoration:none,$textAlign: left,$font-weight: medium,){
-  text-align: $textAlign;
-  font: normal normal $font-weight $fontSize ;
-  color: $color;
-  text-transform: $text-transform;
-  text-decoration: $text-decoration;
-}
-
 @mixin center-element() {
   display: flex;
   justify-content: center;
@@ -27,4 +13,17 @@
 
 @mixin border($color: $gray-light-color, $size : 1px){
   border: solid $size  $color;
+}
+
+@mixin hideScrollBar(){
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important;  /* IE 10+ */
+  &::-webkit-scrollbar { /* WebKit */
+      width: 0 !important;
+      height: 0 !important;
+  }
+  &::-webkit-scrollbar {
+      width: 0px !important;
+      background: transparent !important; /* make scrollbar transparent */
+  }
 }
