--- a/src/app/home/components/users-navbar/users.component.html
+++ b/src/app/home/components/users-navbar/users.component.html
@@ -1,16 +1,15 @@
-<div class="nav user-nav-wrapper" *ngIf="(users$ | async) as users ; else loading ">
+<nav class="nav user-nav-wrapper" *ngIf="(users$ | async) as users ; else loading ">
   <a *ngFor="let user of users; let i = index ; trackBy:identify "
      class="user-nav-link"
      routerLink="/"
      routerLinkActive="active"
      [queryParams]="{userId: user.id}"
      [class.active]="false"> {{user.username}} </a>
-</div>
+</nav>
 
  <ng-template #loading>
   <app-skelton-loader></app-skelton-loader>
  </ng-template>
 
-<ng-container *ngIf="(usersError$ | async) as message ">
-  <app-error-alert [message]="message"></app-error-alert>
-</ng-container>
+ <app-error-alert *ngIf="(usersError$ | async) as message"[message]="message">
+ </app-error-alert>
