change sass file imports

--- a/src/app/home/components/post-list/post-card/comments/comment-item/comment-item.component.scss
+++ b/src/app/home/components/post-list/post-card/comments/comment-item/comment-item.component.scss
@@ -1,4 +1,5 @@
-@import "src/assets/style/style";
+@import "src/assets/style/sass-utils/_variables";
+@import "src/assets/style/sass-utils/mixins";
 .comment-wrapper{
   padding: 6px;
   margin: 2px;
