--- a/src/app/home/components/post-list/post-card/post-card.component.scss
+++ b/src/app/home/components/post-list/post-card/post-card.component.scss
@@ -1,4 +1,5 @@
-@import "/src/assets/style/style.scss";
+@import "/src/assets/style/sass-utils/_mixins.scss";
+@import "/src/assets/style/sass-utils/_variables.scss";
 
 .post-card-wrapper {
   cursor: pointer;
